--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-   <ProgressBar
+
+    <FrameLayout
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       style="@style/Widget.AppCompat.ProgressBar"
-       android:layout_centerInParent="true"
-       android:id="@+id/progressbar"/>
- <ImageView
-     android:layout_width="150dp"
-     android:layout_height="150dp"
-     android:layout_centerInParent="true"
-     android:id="@+id/noWifiImageView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/emptyView"
-        android:layout_centerInParent="true"
-        android:textAppearance="?android:textAppearanceMedium">
+        android:background="@color/colorPrimary"
+        android:fitsSystemWindows="true"
+        tools:context="com.roberts.adrian.popularmovies.MainActivity">
 
-    </TextView>
+        <ProgressBar
+            android:id="@+id/progressbar"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="@dimen/progressbar"
+            android:layout_height="@dimen/progressbar"
+            android:layout_gravity="center"
+           />
 
-    <GridView
-        android:layout_width="match_parent"
+
+        <TextView
+            android:id="@+id/emptyView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/colorAccent"
+            tools:text="@string/empty_view_text">
+
+        </TextView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false" />
+
+    </FrameLayout>
+
+    <!-- The navigation drawer -->
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="@dimen/menu_list_width"
         android:layout_height="match_parent"
-        android:id="@+id/moviesGridView"
-        android:numColumns="2"
-        android:scrollbarStyle="outsideOverlay"
-        android:verticalScrollbarPosition="right"
-        android:scrollbars="vertical">
-    </GridView>
-
-</RelativeLayout>
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="@color/left_drawer_bg"/>
+</android.support.v4.widget.DrawerLayout>
