--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/recycler_item_selector">
     <ImageView
         android:layout_width="185dp"
         android:layout_height="277dp"
-        android:id="@+id/grid_item_image_view"
-        android:src="@mipmap/dummy_poster"/>
+        android:id="@+id/grid_item_image_view" />
 
 </FrameLayout>
