--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,10 +3,18 @@
     <string-array name="settings_order_by_labels">
         <item>@string/settings_order_by_popularity_label</item>
         <item>@string/settings_order_by_rating_label</item>
+        <item>@string/settings_order_by_favourite_label</item>
     </string-array>
 
     <string-array name="settings_order_by_values">
         <item>@string/settings_order_by_popularity_value</item>
         <item>@string/settings_order_by_rating_value</item>
+        <item>@string/settings_order_by_favourite_value</item>
+    </string-array>
+    
+    <string-array name="movie_list_titles">
+        <item>Popular Movies</item>
+        <item>Top Rated Movies</item>
+        <item>Favourites</item>
     </string-array>
 </resources>
