--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,17 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin_large">32dp</dimen>
+    <dimen name="activity_vertical_margin_large">32dp</dimen>
+    <dimen name="small_text">18sp</dimen>
+    <dimen name="medium_text">24sp</dimen>
+    <dimen name="large_text">34sp</dimen>
+    <dimen name="padding_standard">8dp</dimen>
+    <dimen name="padding_large">16dp</dimen>
+    <dimen name="padding_small">4dp</dimen>
+    <dimen name="progressbar">200dp</dimen>
+    <dimen name="menu_list_width">240dp</dimen>
+    <dimen name="details_header_height">180dp</dimen>
+    <dimen name="save_button">80dp</dimen>
+
 </resources>
