--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,8 +11,9 @@
     <style name="movieDetailTextViewStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textColor">@color/detailsTextColor</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginRight">@dimen/padding_standard</item>
     </style>
 
     <style name="PopupMenuStyle" parent="Theme.AppCompat.Light">
