--- a/app/src/main/res/layout-land/grid_item.xml
+++ b/app/src/main/res/layout-land/grid_item.xml
@@ -4,12 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:tag="gridLand"
     android:id="@+id/grid_item"
-    android:background="@drawable/recycler_item_selector"
-    android:tag="gridDef">
+    android:background="@drawable/recycler_item_selector">
     <ImageView
-        android:layout_width="185dp"
-        android:layout_height="278dp"
+        android:layout_width="198dp"
+        android:layout_height="298dp"
         android:id="@+id/grid_item_image_view" />
 
 </LinearLayout>
