--- a/app/src/main/res/layout-sw400dp/grid_item.xml
+++ b/app/src/main/res/layout-sw400dp/grid_item.xml
@@ -6,10 +6,10 @@
     android:layout_gravity="center_horizontal"
     android:id="@+id/grid_item"
     android:background="@drawable/recycler_item_selector"
-    android:tag="gridDef">
+    android:tag="grid400">
     <ImageView
-        android:layout_width="185dp"
-        android:layout_height="278dp"
+        android:layout_width="194dp"
+        android:layout_height="291dp"
         android:id="@+id/grid_item_image_view" />
 
 </LinearLayout>
