--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:tag="drDef">
 
-    <FrameLayout
+    <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
-        android:fitsSystemWindows="true"
         tools:context="com.roberts.adrian.popularmovies.MainActivity">
 
         <ProgressBar
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@color/colorAccent"
             tools:text="@string/empty_view_text">
@@ -36,11 +37,11 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewMain"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:clipToPadding="false" />
 
-    </FrameLayout>
+    </RelativeLayout>
 
     <!-- The navigation drawer -->
     <ListView
