--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -35,7 +35,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewMain"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:clipToPadding="false" />
