--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,9 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewMain"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:clipToPadding="false" />
 
     </RelativeLayout>
