--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -37,14 +37,19 @@
                     android:textColor="@color/textColor"
                     tools:text="Trailers" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerview_trailers"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToPadding="false"
-                    android:paddingBottom="8dp"
-                    android:paddingLeft="@dimen/activity_vertical_margin"
-                    android:paddingStart="@dimen/activity_vertical_margin" />
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerview_trailers"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:clipToPadding="false"
+                        android:paddingBottom="@dimen/padding_standard"
+                        android:paddingLeft="@dimen/activity_vertical_margin"
+                        android:paddingStart="@dimen/activity_vertical_margin" />
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/tv_ReviewLabel"
@@ -62,7 +67,7 @@
                     android:clipToPadding="false"
                     android:paddingBottom="@dimen/padding_standard"
                     android:paddingLeft="@dimen/activity_vertical_margin"
-                    android:paddingStart="@dimen/activity_vertical_margin"/>
+                    android:paddingStart="@dimen/activity_vertical_margin" />
 
             </LinearLayout>
         </LinearLayout>
