--- a/app/src/main/res/layout/details_primary.xml
+++ b/app/src/main/res/layout/details_primary.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,92 +24,102 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/activity_vertical_margin">
+            android:background="@drawable/elevation_rect"
+            android:elevation="8dp"
+            card_view:cardBackgroundColor="@color/colorPrimary"
+            card_view:cardCornerRadius="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_movieDetails_title"
-                    style="@style/movieDetailTextViewStyle"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="@dimen/large_text" />
-
-                <TextView
-                    android:id="@+id/tv_movieDetails_title_EN"
-                    style="@style/movieDetailTextViewStyle"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="@dimen/small_text" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:padding="@dimen/activity_vertical_margin">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/tv_movieDetails_releaseDate"
+                        android:id="@+id/tv_movieDetails_title"
                         style="@style/movieDetailTextViewStyle"
-                        android:paddingTop="@dimen/padding_standard"
-                        android:textSize="@dimen/medium_text" />
+                        android:fontFamily="sans-serif-light"
+                        android:textSize="@dimen/large_text" />
 
                     <TextView
-                        android:id="@+id/tv_movieDetails_runtime"
+                        android:id="@+id/tv_movieDetails_title_EN"
                         style="@style/movieDetailTextViewStyle"
-                        android:paddingBottom="@dimen/padding_standard"
-                        android:textColor="@color/textColor"
-                        android:textStyle="italic" />
+                        android:fontFamily="sans-serif-light"
+                        android:textSize="@dimen/small_text" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/favourite_button_surrounding"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginLeft="170dp"
-                    android:layout_marginStart="170dp"
-                    android:gravity="end"
-                    android:onClick="saveAsFavourite">
+                    android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/save_button"
-                        android:layout_width="@dimen/save_button"
-                        android:layout_height="@dimen/save_button"
-                        android:layout_gravity="center"
-                        android:background="@drawable/favourite_selector"
-                        android:onClick="saveAsFavourite" />
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
+                        <TextView
+                            android:id="@+id/tv_movieDetails_releaseDate"
+                            style="@style/movieDetailTextViewStyle"
+                            android:paddingTop="@dimen/padding_standard"
+                            android:textSize="@dimen/medium_text" />
+
+                        <TextView
+                            android:id="@+id/tv_movieDetails_runtime"
+                            style="@style/movieDetailTextViewStyle"
+                            android:paddingBottom="@dimen/padding_standard"
+                            android:textColor="@color/textColor"
+                            android:textStyle="italic" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/favourite_button_surrounding"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="170dp"
+                        android:layout_marginStart="170dp"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:onClick="saveAsFavourite">
+
+                        <ImageView
+                            android:id="@+id/save_button"
+                            android:layout_width="@dimen/save_button"
+                            android:layout_height="@dimen/save_button"
+                            android:layout_gravity="center"
+                            android:background="@drawable/favourite_selector"
+                            android:onClick="saveAsFavourite" />
+
+                    </LinearLayout>
                 </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/tv_movieDetails_overview"
+                    style="@style/movieDetailTextViewStyle"
+                    android:textColor="@color/textColor" />
+
+                <RatingBar
+                    android:id="@+id/rb_movieDetails_rating"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/padding_large">
+
+                </RatingBar>
             </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/tv_movieDetails_overview"
-                style="@style/movieDetailTextViewStyle"
-                android:textColor="@color/textColor" />
-
-            <RatingBar
-                android:id="@+id/rb_movieDetails_rating"
-                style="?android:attr/ratingBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/padding_large">
-
-            </RatingBar>
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
+
 </layout>
