--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="colorAccent">#9A0000</color> <!--FF4081-->
 
     <color name="textColor">#fff</color>
+    <color name="textColorDark">#666666</color>
+
     <color name="translucent_black">#80000000</color>
 
     <color name="left_drawer_bg">#111</color>
