--- a/app/src/main/res/layout/details_primary.xml
+++ b/app/src/main/res/layout/details_primary.xml
@@ -58,19 +58,19 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tv_movieDetails_releaseDate"
                             style="@style/movieDetailTextViewStyle"
+                            android:textColor="@color/textColorDark"
                             android:paddingTop="@dimen/padding_standard"
                             android:textSize="@dimen/medium_text" />
 
@@ -78,7 +78,7 @@
                             android:id="@+id/tv_movieDetails_runtime"
                             style="@style/movieDetailTextViewStyle"
                             android:paddingBottom="@dimen/padding_standard"
-                            android:textColor="@color/textColor"
+                            android:textColor="@color/textColorDark"
                             android:textStyle="italic" />
                     </LinearLayout>
 
