--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
 
     </RelativeLayout>
 
+
     <!-- The navigation drawer -->
     <ListView
         android:id="@+id/left_drawer"
@@ -53,5 +54,5 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="@color/left_drawer_bg"/>
+        android:background="@color/colorPrimaryDark"/>
 </android.support.v4.widget.DrawerLayout>
