--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -28,6 +28,18 @@
                 android:padding="@dimen/activity_vertical_margin">
 
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerview_images"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/padding_standard" />
+                </RelativeLayout>
                 <TextView
                     android:id="@+id/tv_TrailerLabel"
                     android:layout_width="wrap_content"
@@ -36,6 +48,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textColor="@color/textColor"
                     tools:text="Trailers" />
+
 
                 <RelativeLayout
                     android:layout_width="match_parent"
