--- a/app/src/main/res/layout/details_primary.xml
+++ b/app/src/main/res/layout/details_primary.xml
@@ -25,11 +25,12 @@
         </LinearLayout>
 
         <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/elevation_rect"
+            android:layout_margin="@dimen/activity_vertical_margin"
             android:elevation="8dp"
-            card_view:cardBackgroundColor="@color/colorPrimary"
+            card_view:cardBackgroundColor="@color/colorSemiDark"
             card_view:cardCornerRadius="16dp">
 
             <LinearLayout
@@ -58,13 +59,13 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="3"
                         android:orientation="horizontal">
 
                         <TextView
@@ -86,8 +87,6 @@
                         android:id="@+id/favourite_button_surrounding"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="170dp"
-                        android:layout_marginStart="170dp"
                         android:layout_weight="1"
                         android:gravity="end"
                         android:onClick="saveAsFavourite">
