--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,10 +1,11 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="recyclerView_margin">4dp</dimen>
+    <dimen name="recyclerView_margin">8dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin_large">32dp</dimen>
     <dimen name="activity_vertical_margin_large">32dp</dimen>
+    <dimen name="activity_vertical_margin_xtra_large">64dp</dimen>
     <dimen name="small_text">18sp</dimen>
     <dimen name="medium_text">24sp</dimen>
     <dimen name="large_text">56sp</dimen>
