--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="recyclerView_margin">4dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin_large">32dp</dimen>
@@ -13,6 +14,6 @@
     <dimen name="progressbar">200dp</dimen>
     <dimen name="menu_list_width">240dp</dimen>
     <dimen name="details_header_height">180dp</dimen>
-    <dimen name="save_button">80dp</dimen>
+    <dimen name="save_button">72dp</dimen>
 
 </resources>
